UPDATE: ADD SERVER

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "@blocknote/core": "^0.11.2",
     "@blocknote/react": "^0.11.2",
     "@fortawesome/fontawesome-free": "5.15.2",
+    "axios": "^1.6.7",
     "bootstrap": "4.6.0",
     "chartist": "0.11.4",
     "gulp": "4.0.2",
@@ -12,6 +13,7 @@
     "react": ">=16.8.0",
     "react-bootstrap": "2.4.0",
     "react-chartist": "0.14.4",
+    "react-contenteditable": "^3.3.7",
     "react-dom": ">=16.8.0",
     "react-notification-alert": "0.0.13",
     "react-router": "5.2.0",
