--- a/package.json
+++ b/package.json
@@ -143,6 +143,7 @@
     "collection-map": "^1.0.0",
     "collection-visit": "^1.0.0",
     "color-convert": "^1.9.3",
+    "nodemon": "^3.0.2",
     "color-name": "^1.1.3",
     "color-support": "^1.1.3",
     "colord": "^2.9.3",
@@ -1231,5 +1232,8 @@
     "prettier": "^2.8.3"
   },
   "author": "",
+  "engines": {
+    "node": "^18.19.1"
+  },
   "license": "MIT"
 }
